--- a/home/code/StockSite/robinhood/templates/robinhood/registration.html
+++ b/home/code/StockSite/robinhood/templates/robinhood/registration.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Register Your Robinhood Account</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static "css/bootstrap.min.css"%}" rel="stylesheet">
@@ -20,15 +20,13 @@
   </head>
 
   <body>
-
     <div class="container">
-
-      <form class="form-signin">
+      <form class="form-signin" action="/robinhood/register" method="POST">{% csrf_token %}
         <h2 class="form-signin-heading">Enter your Robinhood information to link your accounts</h2>
-        <label for="inputEmail" class="sr-only">Email address/Username</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputEmail" class="sr-only">Username/Email Address</label>
+        <input type="username" id="inputEmail" name="username" class="form-control" placeholder="Email/User" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
@@ -37,9 +35,5 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
     </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
