--- a/home/code/StockSite/robinhood/templates/robinhood/signin.html
+++ b/home/code/StockSite/robinhood/templates/robinhood/signin.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Sign in to your Robinhood account</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static "css/bootstrap.min.css"%}" rel="stylesheet">
@@ -20,13 +20,11 @@
   </head>
 
   <body>
-
     <div class="container">
-
-      <form class="form-signin">
+      <form class="form-signin"> {% csrf_token %}
         <h2 class="form-signin-heading">Sign in to Robinhood!</h2>
         <label for="inputEmail" class="sr-only">Email address/Username</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="username" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox">
